working on output processing

--- a/notebooks/vaccine_clinic_model4.ipynb
+++ b/notebooks/vaccine_clinic_model4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1f779db1",
+   "id": "613a45a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb65f335",
+   "id": "5b344038",
    "metadata": {},
    "source": [
     "## Improving our initial vaccine clinic model\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03ce70de",
+   "id": "23bb4066",
    "metadata": {},
    "source": [
     "## Redesign for easier use\n",
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9cc0817",
+   "id": "d0946164",
    "metadata": {},
    "source": [
     "## Creating a CLI and using config files\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "188485bd",
+   "id": "8e7c67b6",
    "metadata": {},
    "source": [
     "### Basic handling of command line arguments (learning about `argv`)\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7562b333",
+   "id": "b3e6d8ac",
    "metadata": {},
    "source": [
     "Let's create a small program that takes a few command line arguments and just repeats them back when the program is run. Here's what the program looks like. I've saved it as `echo_args.py`. We'll interpret the command line arguments as follows:\n",
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d8a3fb67",
+   "id": "54624df0",
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "490744ac",
+   "id": "1c09c2f3",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d46f1250",
+   "id": "a11fb2f7",
    "metadata": {},
    "source": [
     "If you've forgotten what the purpose of the following is:\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "60016f6e",
+   "id": "17492406",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f81e81f5",
+   "id": "1d12ffc0",
    "metadata": {},
    "source": [
     "So, `sys.argv` is a list of the command line arguments passed in to `echo_args.py`. Note that `sys.argv[0]` is just the name of the program itself, including the relative path from this working directory to the program file. At this point, our program doesn't do any checking of the presence or validity of the input arguments. It just prints back out whatever values we input on the command line. If all of these arguments were required, we could add a check like this:"
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "222ff95f",
+   "id": "63f476d9",
    "metadata": {
     "tags": []
    },
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "95601310",
+   "id": "44c2c1c3",
    "metadata": {
     "tags": []
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55a37a26",
+   "id": "160ea93d",
    "metadata": {},
    "source": [
     "The example above is highly simplified and the world of command line arguments and command line processing, known as *argument parsing*, is much richer than this. Not only do we have *arguments* such as in this example, we also might have *options* (also called *flags*). In the pcda class we saw this when using things like the `ls` command:\n",
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae695b1e",
+   "id": "57f10e2f",
    "metadata": {},
    "source": [
     "Before checking out argument parsing tools, let's do it ourselves for the following simple case. Let's assume we just want the following command line options. They can be in any order but each must be followed by a numeric value for that option. So,\n",
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0ed43ed1",
+   "id": "33b591df",
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "307586a6",
+   "id": "b95e0b67",
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ada0d83",
+   "id": "f229868e",
    "metadata": {},
    "source": [
     "Here we change the order and include one bad option."
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "71741a91",
+   "id": "667d8590",
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c75ad20",
+   "id": "8cc135b7",
    "metadata": {},
    "source": [
     "#### Learning more about command line arguments\n",
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e2482b4",
+   "id": "578baad9",
    "metadata": {},
    "source": [
     "### Tools for argument parsing and building CLI's."
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ceb7cd3b",
+   "id": "b708b821",
    "metadata": {},
    "source": [
     "Clearly, it is going to be (potentially) difficult to deal with all the complexity of command line *argument parsing* manually by checking all the values in the `sys.argv` list. Thankfully, there are numerous tools for doing command line argument parsing and helping us create command line interfaces for our Python programs. Some of these tools include:\n",
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e22b41ef",
+   "id": "33df3aec",
    "metadata": {},
    "source": [
     "### Creating a CLI with argparse\n",
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ef669f1a",
+   "id": "cdaff30f",
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cdcc99c",
+   "id": "a48b47d4",
    "metadata": {},
    "source": [
     "Now that we've got a basic grasp of creating a simple CLI, we will do all further development on this model in `vaccine_clinic_model4.py`. You should create a new PyCharm project based on the existing vaccine clinic project folder (the one containing `setup.py`). I'm going to show you my project and describe a few additions I made to the CLI. I added a whole bunch of inputs to eliminate all of the hard coding of parameters that are first model version contained. Instead of typing stuff, here's the results from running the program with the `--help` argument:\n",
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98b456cb",
+   "id": "6f80fdfe",
    "metadata": {},
    "source": [
     "Yikes, that's a lot of inputs. Obviously we don't want to be typing those on the command line. Instead, as you'll see soon, we'll read them from a *config* file - just a text file that lists the argument names and their values. "
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5a486e7",
+   "id": "6d29f858",
    "metadata": {},
    "source": [
     "```\n",
@@ -588,16 +588,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b37f5f18",
+   "id": "34678835",
    "metadata": {},
    "source": [
-    "In addition, I created a little driver program to call the `simulate` function and pass it a dictionary containing all of the input argument values."
+    "In addition, I created a little driver program, `use_vaccine_clinic_model4.py`, to call the `simulate` function and pass it a dictionary containing all of the input argument values."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5089ee0",
+   "id": "64b2c306",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8f7e915",
+   "id": "815391e9",
    "metadata": {},
    "source": [
     "Ok, let's go look at the Python script version of `vaccine_clinic_model4.py`. Obviously, it's in the `src/vaccine_clinic/` folder."
