added extensions and many edits

--- a/notebooks/vaccine_clinic_model4.ipynb
+++ b/notebooks/vaccine_clinic_model4.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a719da55",
+   "execution_count": 1,
+   "id": "034ed303",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "899128c7",
+   "id": "631d3d27",
    "metadata": {},
    "source": [
     "## Improving our initial vaccine clinic model\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40f347fd",
+   "id": "c4133071",
    "metadata": {},
    "source": [
     "## Redesign for easier use\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9afa0f59",
+   "id": "f77edd23",
    "metadata": {},
    "source": [
     "## Creating a CLI and using config files\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06341a30",
+   "id": "8766471c",
    "metadata": {},
    "source": [
     "### Basic handling of command line arguments (learning about `argv`)\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1c6e4ec",
+   "id": "daa90b25",
    "metadata": {},
    "source": [
     "Let's create a small program that takes a few command line arguments and just repeats them back when the program is run. Here's what the program looks like. I've saved it as `echo_args.py`. We'll interpret the command line arguments as follows:\n",
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ceaf892",
+   "id": "40168bdc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,17 +125,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bd909671",
+   "execution_count": 2,
+   "id": "b0d4b441",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Command line args: ['../src/vaccine_clinic/echo_args.py', '3.0', '2', '4', '15', '4']\n",
+      "\n",
+      "sys.argv[0]: ../src/vaccine_clinic/echo_args.py\n",
+      "sys.argv[1]: 3.0\n",
+      "sys.argv[2]: 2\n",
+      "sys.argv[3]: 4\n",
+      "sys.argv[4]: 15\n",
+      "sys.argv[5]: 4\n"
+     ]
+    }
+   ],
    "source": [
     "!python ../src/vaccine_clinic/echo_args.py 3.0 2 4 15 4"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "65eb90e1",
+   "id": "aab1e11a",
    "metadata": {},
    "source": [
     "So, `sys.argv` is a list of the command line arguments passed in to `echo_args.py`. Note that `sys.argv[0]` is just the name of the program itself, including the relative path from this working directory to the program file. \n",
@@ -147,12 +162,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "72433fbf",
+   "execution_count": 3,
+   "id": "121430dd",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Command line args: ['C:\\\\Users\\\\isken\\\\Anaconda3\\\\envs\\\\aap\\\\lib\\\\site-packages\\\\ipykernel_launcher.py', '-f', 'C:\\\\Users\\\\isken\\\\AppData\\\\Roaming\\\\jupyter\\\\runtime\\\\kernel-0461fba6-284b-41b9-a554-731bf4e22442.json']\n",
+      "\n",
+      "Five args required, only 2 specified.\n",
+      "sys.argv[0]: C:\\Users\\isken\\Anaconda3\\envs\\aap\\lib\\site-packages\\ipykernel_launcher.py\n",
+      "sys.argv[1]: -f\n",
+      "sys.argv[2]: C:\\Users\\isken\\AppData\\Roaming\\jupyter\\runtime\\kernel-0461fba6-284b-41b9-a554-731bf4e22442.json\n"
+     ]
+    }
+   ],
    "source": [
     "# echo_args.py\n",
     "import sys\n",
@@ -173,19 +201,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ecb216ad",
+   "execution_count": 4,
+   "id": "3e9b264b",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Command line args: ['../src/vaccine_clinic/echo_args.py', '3.0', '2', '4']\n",
+      "\n",
+      "Five positional args required, only 3 specified.\n"
+     ]
+    }
+   ],
    "source": [
     "!python ../src/vaccine_clinic/echo_args.py 3.0 2 4"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "275d3316",
+   "id": "aa781d2f",
    "metadata": {},
    "source": [
     "### What's up with the `__name__` thing?"
@@ -194,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84c16ad5",
+   "id": "a89f5bf1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dec12538",
+   "id": "5a845918",
    "metadata": {},
    "source": [
     "If you've forgotten what the purpose of the following is:\n",
@@ -218,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ef1c8cc",
+   "id": "0933014d",
    "metadata": {},
    "source": [
     "The example above is highly simplified and the world of command line arguments and command line processing, known as *argument parsing*, is much richer than this. Not only do we have *arguments* such as in this example, we also might have *options* (also called *flags*). In the pcda class we saw this when using things like the `ls` command:\n",
@@ -233,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faf9b6b9",
+   "id": "23ad66bc",
    "metadata": {},
    "source": [
     "Before checking out argument parsing tools, let's do it ourselves for the following simple case. Let's assume we just want the following command line options. They can be in any order but each must be followed by a numeric value for that option. So,\n",
@@ -250,10 +288,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a4e15dd8",
+   "execution_count": 5,
+   "id": "315d21e4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'mean_interarrival_time': 0.0, 'num_greeters': 0, 'num_reg_staff': 0, 'num_vaccinators': 0, 'num_schedulers': 0}\n"
+     ]
+    }
+   ],
    "source": [
     "# get_option_values.py\n",
     "import sys\n",
@@ -290,17 +336,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "56255a0e",
+   "execution_count": 6,
+   "id": "72f3c5d2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'mean_interarrival_time': '3.0', 'num_greeters': '2', 'num_reg_staff': '4', 'num_vaccinators': '15', 'num_schedulers': '4'}\n"
+     ]
+    }
+   ],
    "source": [
     "!python ../src/vaccine_clinic/get_option_values.py --iat 3.0 --greet 2 --reg 4 --vacc 15 --sched 4"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "af29df28",
+   "id": "464e69da",
    "metadata": {},
    "source": [
     "Here we change the order and include one bad option."
@@ -308,17 +362,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "389c9231",
+   "execution_count": 7,
+   "id": "ce9103fd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unrecognized argument: --schedulers\n",
+      "{'mean_interarrival_time': '3.0', 'num_greeters': '2', 'num_reg_staff': '4', 'num_vaccinators': '15', 'num_schedulers': 0}\n"
+     ]
+    }
+   ],
    "source": [
     "!python ../src/vaccine_clinic/get_option_values.py --vacc 15 --iat 3.0 --greet 2 --reg 4 --schedulers 4"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d87b1d0b",
+   "id": "8df38ab9",
    "metadata": {},
    "source": [
     "#### Learning more about command line arguments\n",
@@ -329,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce616f69",
+   "id": "4e03aeea",
    "metadata": {},
    "source": [
     "### Tools for argument parsing and building CLI's."
@@ -337,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6ed0b6b",
+   "id": "668165ba",
    "metadata": {},
    "source": [
     "Clearly, it is going to be (potentially) difficult to deal with all the complexity of command line *argument parsing* manually by checking all the values in the `sys.argv` list. Thankfully, there are numerous tools for doing command line argument parsing and helping us create command line interfaces for our Python programs. Some of these tools include:\n",
@@ -355,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52fe44dc",
+   "id": "96483a94",
    "metadata": {},
    "source": [
     "### Creating a CLI with argparse\n",
@@ -373,17 +436,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "64887893",
+   "execution_count": 11,
+   "id": "6c3ae6b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "args.iat:  3.0\n",
+      "args:  Namespace(greet=2, iat=3.0, reg=4, sched=4, vacc=15)\n",
+      "vars(args): {'iat': 3.0, 'greet': 2, 'reg': 4, 'vacc': 15, 'sched': 4}\n"
+     ]
+    }
+   ],
    "source": [
     "!python ../src/vaccine_clinic/echo_args_argparse.py --iat 3.0 --greet 2 --reg 4 --vacc 15 --sched 4"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f4b24079",
+   "id": "3fa80e21",
    "metadata": {},
    "source": [
     "Now that we've got a basic grasp of creating a simple CLI, we will do all further development on this model in `vaccine_clinic_model4.py`. You should create a new PyCharm project based on the existing vaccine clinic project folder (the one containing `setup.py`). I'm going to show you my project and describe a few additions I made to the CLI. I added a whole bunch of inputs to eliminate all of the hard coding of parameters that are first model version contained. Instead of typing stuff, here's the results from running the program with the `--help` argument:\n",
@@ -465,7 +538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af4b7157",
+   "id": "863ad18b",
    "metadata": {},
    "source": [
     "Yikes, that's a lot of inputs. Obviously we don't want to be typing those on the command line. Instead, as you'll see soon, we'll read them from a *config* file - just a text file that lists the argument names and their values. Here's what one of these config files looks like:"
@@ -473,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a414e36b",
+   "id": "51c30f36",
    "metadata": {},
    "source": [
     "```\n",
@@ -503,7 +576,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd865beb",
+   "id": "3261bee0",
    "metadata": {},
    "source": [
     "In addition, I created a little driver program, `use_vaccine_clinic_model4.py`, to call the `simulate` function and pass it a dictionary containing all of the input argument values. It does this by importing functions from `vaccine_clinic_model4.py`. We will see that we can run the simulation model from the command line or we can import the model file and run it from code we write in another script, or even in a Jupyter notebook."
@@ -511,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf88fb3f",
+   "id": "944cfcf5",
    "metadata": {},
    "source": [
     "Ok, let's go look at the Python script version of `vaccine_clinic_model4.py`. It's in the `src/vaccine_clinic/` folder."
@@ -520,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77743dec",
+   "id": "7323c071",
    "metadata": {},
    "outputs": [],
    "source": []
